--- a/history.html
+++ b/history.html
@@ -30,13 +30,20 @@
                 <i data-lucide="history" class="w-6 h-6"></i>
                 <span class="text-[10px] font-medium">History</span>
             </a>
+            <a href="settings.html" class="flex flex-col items-center gap-1 text-gray-500 hover:text-white transition-colors">
+                <i data-lucide="settings" class="w-6 h-6"></i>
+                <span class="text-[10px] font-medium">Settings</span>
+            </a>
         </div>
     </nav>
 
     <script>
         lucide.createIcons();
         
-        function loadHistory() {
+        // Use db helpers to check if heavy data exists
+        function openDB(){return new Promise(r=>{const q=indexedDB.open("BarpathDB",2);q.onsuccess=e=>r(e.target.result);q.onerror=()=>r(null)})}
+
+        async function loadHistory() {
             const list = document.getElementById('historyList');
             const history = JSON.parse(localStorage.getItem('liftHistory') || '[]');
 
@@ -78,12 +85,24 @@
             lucide.createIcons();
         }
 
-        function viewLift(i) {
+        async function viewLift(i) {
             const history = JSON.parse(localStorage.getItem('liftHistory') || '[]');
             const lift = history[i];
-            if(lift && lift.resultData) {
-                localStorage.setItem('lastResult', JSON.stringify(lift.resultData));
+            
+            if (lift) {
+                // We assume the DB has the heavy data if the ID matches
                 localStorage.setItem('lastResultId', lift.id);
+                // We create a fake "meta" object since we don't store full meta in history list to save space
+                // Ideally, history list SHOULD store the lightweight meta.
+                // For now, let's reconstruct minimal meta so the results page doesn't crash
+                const meta = {
+                    metrics: {
+                        technique_score: lift.score,
+                        peak_velocity: lift.velocity,
+                        duration: parseFloat(lift.duration)
+                    }
+                };
+                localStorage.setItem('lastResultMeta', JSON.stringify(meta));
                 window.location.href = 'results.html';
             }
         }
