--- a/index.html
+++ b/index.html
@@ -121,9 +121,17 @@
             <button onclick="window.location.href='upload.html'" class="glass-panel p-6 rounded-3xl flex items-center justify-between hover:bg-white/5 transition-colors active:scale-95 duration-200 text-left">
                 <div>
                     <h3 class="text-xl font-bold text-white mb-1">Upload Video</h3>
-                    <p class="text-gray-400 text-sm">Import from gallery</p>
+                    <p class="text-gray-400 text-sm">Import single video from gallery</p>
                 </div>
                 <i data-lucide="upload-cloud" class="w-6 h-6 text-blue-400"></i>
+            </button>
+
+            <button onclick="window.location.href='batch.html'" class="glass-panel p-6 rounded-3xl flex items-center justify-between hover:bg-purple-900/20 transition-colors active:scale-95 duration-200 text-left border-purple-500/30">
+                <div>
+                    <h3 class="text-xl font-bold text-purple-200 mb-1">Batch Analysis</h3>
+                    <p class="text-purple-400 text-sm">Process multiple videos at once</p>
+                </div>
+                <i data-lucide="layers" class="w-6 h-6 text-purple-400"></i>
             </button>
         </div>
 
